[package]
name = "regexsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
priority-queue = "1.3.2"
random-string = "1.0"
rand = "0.8"
cute = "0.3.0"
flame = "0.2.1"
flamer = "0.3"

[profile.release]
debug = 1
